// nothing here



///////////////////////message////////

// message NotAMessage {
//
// }

message EmptyMessageWithComment {
    // nothing here either
}

// Another EmptyMessageWithComment
///
